# log-copilot-bpmsoft

./: .env.example  .gitignore  EDA.ipynb  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: tests.yml
Logs/2025-10-20/: SQL.json
Logs/2025-10-21/: SQL.json
Logs/2025-10-22/: SQL.json
Logs/2025-10-23/: SQL.json
Logs/2025-10-24/: SQL.json
Logs/2025-10-27/: SQL.json
Logs/2025-10-28/: SQL.json
Logs/2025-10-29/: SQL.json
Logs/2025-10-30/: SQL.json
Logs/2025-10-31/: SQL.json
Logs/2025-11-01/: SQL.json
Logs/2025-11-05/: SQL.json
Logs/2025-11-06/: SQL.json
Logs/2025-11-07/: SQL.json
Logs/2025-11-10/: SQL.json
Logs/2025-11-11/: SQL.json
Logs/2025-11-12/: SQL.json
Logs/2025-11-13/: SQL.json
Logs/2025-11-14/: SQL.json
Logs/2025-11-17/: SQL.json
Logs/2025-11-18/: SQL.json
Logs/2025-11-19/: SQL.json
Logs/2025-11-20/: SQL.json
Logs/2025-11-21/: SQL.json
Logs/2025-11-24/: SQL.json
Logs/2025-11-25/: SQL.json
docs/: README.md  architecture.md  contracts.md  github_setup.md  team_workflow.md
logcopilot/: __init__.py  cli.py  clustering.py  models.py  normalization.py  parsing.py  pipeline.py  quality.py  reporting.py  semantic.py  service.py  signatures.py
out_sample/: clusters.csv  top_clusters.md
out_sample_2/: clusters.csv  top_clusters.md
out_verified/: top_clusters.md
tests/: test_agent_chat.py  test_agent_tools.py  test_cli.py  test_heatmap.py  test_normalization.py  test_parsing.py  test_pipeline.py  test_profiles.py  test_storage.py
(+127 files in other folders)
